tests/ui/parser/misspelled-keywords/return.stderr
error: expected one of `!`, `.`, `::`, `;`, `?`, `{`, `}`, or an operator, found `a`
  --> $DIR/return.rs:3:13
   |
LL |     returnn a;
   |             ^ expected one of 8 possible tokens

error: aborting due to 1 previous error

